--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,7 @@ maven.xdoc.date=left
 maven.xdoc.version=${pom.currentVersion}
 maven.linkcheck.enable = true
 maven.javadoc.links = http://java.sun.com/j2se/1.4.1/docs/api/
+maven.javadoc.source = 1.4
 
 #####################################################
 # Site Colors
