--- a/modules/core/src/conf/log4j.properties
+++ b/modules/core/src/conf/log4j.properties
@@ -1,6 +1,7 @@
-log4j.rootCategory=DEBUG, CONSOLE
+log4j.rootCategory=TRACE#org.apache.geronimo.core.log.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.core.log.XLevel
 log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
