--- a/project.properties
+++ b/project.properties
@@ -1,56 +1,5 @@
-maven.junit.fork=true
-#####################################################
-# Build and Deployment
-#####################################################
-maven.repo.remote = http://www.ibiblio.org/maven/
-maven.simian.linecount = 3
-maven.compile.source=1.4
-maven.compile.target=1.4
-#####################################################
-# Properties related to project-site
-#####################################################
-maven.xdoc.date=left
-maven.xdoc.version=${pom.currentVersion}
-maven.linkcheck.enable = true
-maven.javadoc.links = http://java.sun.com/j2se/1.4.1/docs/api/
-maven.javadoc.source = 1.4
+##
+## $Id: project.properties,v 1.3 2003/08/12 14:48:56 jdillon Exp $
+##
 
-#####################################################
-# Site Colors
-#####################################################
-#maven.ui.body.background = #FFFFFF
-#maven.ui.body.foreground = #1F354D
-#maven.ui.section.background = #A2B7C5
-#maven.ui.section.foreground = #FFFFFF
-#maven.ui.subsection.foreground = #1F354D
-#maven.ui.subsection.background = #F2F5F7
-#maven.ui.table.header.background = #E5E3DB
-#maven.ui.table.header.foreground = #686868
-#maven.ui.table.row.odd.foreground = #686868
-#maven.ui.table.row.even.background = #F5F4F1
-#maven.ui.table.row.odd.background = #F5F4F1
-#maven.ui.table.row.even.foreground = #686868
-#maven.ui.banner.background = #FFFFFF
-#maven.ui.banner.foreground = #FFFFFF
-#maven.ui.banner.border.top = #A2B7C5
-#maven.ui.banner.border.bottom = #A2B7C5
-#maven.ui.source.background = #FFFFFF
-#maven.ui.source.foreground = #000000
-#maven.ui.source.border.right = #A2B7C5
-#maven.ui.source.border.top = #A2B7C5
-#maven.ui.source.border.left = #A2B7C5
-#maven.ui.source.border.bottom = #A2B7C5
-#maven.ui.navcol.background = #F2F5F7
-#maven.ui.navcol.background.ns4 = #F2F5F7
-#maven.ui.navcol.foreground = #000000
-#maven.ui.navcol.foreground.ns4 = #555
-#maven.ui.navcol.border.top = #F2F5F7
-#maven.ui.navcol.border.right = #A2B7C5
-#maven.ui.navcol.border.bottom = #A2B7C5
-#maven.ui.breadcrumbs.background = #D5E1E9
-#maven.ui.breadcrumbs.foreground = #000000
-#maven.ui.breadcrumbs.border.bottom = #A2B7C5
-#maven.ui.breadcrumbs.border.top = #D5E1E9
-#maven.ui.href.link = #1F354D
-#maven.ui.href.link.active = #FF5A00
-#maven.ui.href.link.selfref = #1F354D
+
