updated the Maven build process to be allowed to build the full website of all the modules in one integrated website.
also added a target to copy the website into CVS which is the current way to redeploy a website in the incubator, unfortunately


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@43792 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,7 @@
 ##
-## $Id: project.properties,v 1.3 2003/08/12 14:48:56 jdillon Exp $
+## $Id: project.properties,v 1.4 2003/08/14 12:37:50 jstrachan Exp $
 ##
 
+# the directory containing the geronimo website in CVS
 
+geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
