o enable deprecation warnings by default PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@43836 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Id: global.properties,v 1.1 2003/08/14 17:08:00 jdillon Exp $
+## $Id: global.properties,v 1.2 2003/08/16 09:25:29 jdillon Exp $
 ##
 
 #####################################################
@@ -10,6 +10,9 @@ maven.repo.remote=http://www.ibiblio.org/maven/
 
 maven.compile.source=1.4
 maven.compile.target=1.4
+maven.compile.deprecation=true
+maven.compile.debug=true
+maven.compile.optimize=true
 
 maven.junit.fork=true
 
