o Using $Revision$ $Date$ for all files PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@43853 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Id: project.properties,v 1.4 2003/08/14 12:37:50 jstrachan Exp $
+## $Revision: 1.5 $ $Date: 2003/08/16 15:14:11 $
 ##
 
 # the directory containing the geronimo website in CVS
