--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Id: global.properties,v 1.2 2003/08/16 09:25:29 jdillon Exp $
+## $Revision: 1.3 $ $Date: 2003/08/16 15:14:11 $
 ##
 
 #####################################################
