--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.3 $ $Date: 2003/08/16 15:14:11 $
+## $Revision: 1.4 $ $Date: 2003/08/16 17:15:11 $
 ##
 
 #####################################################
@@ -36,39 +36,39 @@ maven.javadoc.source=1.4
 # Site Colors
 #####################################################
 
-#maven.ui.body.background=#FFFFFF
-#maven.ui.body.foreground=#1F354D
-#maven.ui.section.background=#A2B7C5
-#maven.ui.section.foreground=#FFFFFF
-#maven.ui.subsection.foreground=#1F354D
-#maven.ui.subsection.background=#F2F5F7
-#maven.ui.table.header.background=#E5E3DB
-#maven.ui.table.header.foreground=#686868
-#maven.ui.table.row.odd.foreground=#686868
-#maven.ui.table.row.even.background=#F5F4F1
-#maven.ui.table.row.odd.background=#F5F4F1
-#maven.ui.table.row.even.foreground=#686868
-#maven.ui.banner.background=#FFFFFF
-#maven.ui.banner.foreground=#FFFFFF
-#maven.ui.banner.border.top=#A2B7C5
-#maven.ui.banner.border.bottom=#A2B7C5
-#maven.ui.source.background=#FFFFFF
-#maven.ui.source.foreground=#000000
-#maven.ui.source.border.right=#A2B7C5
-#maven.ui.source.border.top=#A2B7C5
-#maven.ui.source.border.left=#A2B7C5
-#maven.ui.source.border.bottom=#A2B7C5
-#maven.ui.navcol.background=#F2F5F7
-#maven.ui.navcol.background.ns4=#F2F5F7
-#maven.ui.navcol.foreground=#000000
-#maven.ui.navcol.foreground.ns4=#555
-#maven.ui.navcol.border.top=#F2F5F7
-#maven.ui.navcol.border.right=#A2B7C5
-#maven.ui.navcol.border.bottom=#A2B7C5
-#maven.ui.breadcrumbs.background=#D5E1E9
-#maven.ui.breadcrumbs.foreground=#000000
-#maven.ui.breadcrumbs.border.bottom=#A2B7C5
-#maven.ui.breadcrumbs.border.top=#D5E1E9
-#maven.ui.href.link=#1F354D
-#maven.ui.href.link.active=#FF5A00
-#maven.ui.href.link.selfref=#1F354D
+maven.ui.body.background=#FFFFFF
+maven.ui.body.foreground=#1F354D
+maven.ui.section.background=#A2B7C5
+maven.ui.section.foreground=#FFFFFF
+maven.ui.subsection.foreground=#1F354D
+maven.ui.subsection.background=#F2F5F7
+maven.ui.table.header.background=#E5E3DB
+maven.ui.table.header.foreground=#686868
+maven.ui.table.row.odd.foreground=#686868
+maven.ui.table.row.even.background=#F5F4F1
+maven.ui.table.row.odd.background=#F5F4F1
+maven.ui.table.row.even.foreground=#686868
+maven.ui.banner.background=#FFFFFF
+maven.ui.banner.foreground=#FFFFFF
+maven.ui.banner.border.top=#A2B7C5
+maven.ui.banner.border.bottom=#A2B7C5
+maven.ui.source.background=#FFFFFF
+maven.ui.source.foreground=#000000
+maven.ui.source.border.right=#A2B7C5
+maven.ui.source.border.top=#A2B7C5
+maven.ui.source.border.left=#A2B7C5
+maven.ui.source.border.bottom=#A2B7C5
+maven.ui.navcol.background=#F2F5F7
+maven.ui.navcol.background.ns4=#F2F5F7
+maven.ui.navcol.foreground=#000000
+maven.ui.navcol.foreground.ns4=#555
+maven.ui.navcol.border.top=#F2F5F7
+maven.ui.navcol.border.right=#A2B7C5
+maven.ui.navcol.border.bottom=#A2B7C5
+maven.ui.breadcrumbs.background=#D5E1E9
+maven.ui.breadcrumbs.foreground=#000000
+maven.ui.breadcrumbs.border.bottom=#A2B7C5
+maven.ui.breadcrumbs.border.top=#D5E1E9
+maven.ui.href.link=#1F354D
+maven.ui.href.link.active=#FF5A00
+maven.ui.href.link.selfref=#1F354D
