--- a/modules/core/src/conf/jndi.properties
+++ b/modules/core/src/conf/jndi.properties
@@ -1,2 +1,3 @@
 java.naming.factory.initial=com.sun.jndi.rmi.registry.RegistryContextFactory
 java.naming.provider.url=rmi://localhost:1099
+java.naming.factory.url.pkgs=org.apache.geronimo.naming
