--- a/modules/twiddle/src/conf/twiddle.conf
+++ b/modules/twiddle/src/conf/twiddle.conf
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.1 $ $Date: 2003/08/24 09:27:44 $ -->
+<!-- $Revision: 1.2 $ $Date: 2003/08/24 10:54:43 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
+  
+  <includes>
+    <include>${twiddle.home}/etc/twiddle/*.conf</include>
+  </includes>
   
   <commands>
     <command name="exit" code="org.apache.geronimo.twiddle.commands.ExitCommand"/>
