o Include etc/* to load resources PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44007 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/twiddle/src/conf/classworlds.conf
+++ b/modules/twiddle/src/conf/classworlds.conf
@@ -5,7 +5,7 @@
 ##############################################################################
 
 ##
-## $Revision: 1.1 $ $Date: 2003/08/25 15:44:54 $
+## $Revision: 1.2 $ $Date: 2003/08/25 17:05:42 $
 ##
 
 # The main entry-point
@@ -17,6 +17,10 @@ main is org.apache.geronimo.twiddle.cli.Main from twiddle
 #
 
 [twiddle]
+    # Allow access to resources
+    load ${twiddle.home}/etc/
+    
+    # Load required libraries
     load ${twiddle.home}/lib/xerces-*.jar
     load ${twiddle.home}/lib/castor-*.jar
     load ${twiddle.home}/lib/log4j-*.jar
