--- a/modules/twiddle/src/conf/twiddle.conf
+++ b/modules/twiddle/src/conf/twiddle.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.2 $ $Date: 2003/08/24 10:54:43 $ -->
+<!-- $Revision: 1.3 $ $Date: 2003/08/25 17:05:42 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
@@ -8,8 +8,22 @@
     <include>${twiddle.home}/etc/twiddle/*.conf</include>
   </includes>
   
+  <classworlds>
+    <realm name="whatever">
+      <load>${twiddle.home}/lib/whatever.jar</load>
+    </realm>
+    
+    <realm name="otherstuff">
+      <load>${twiddle.home}/lib/otherstuff.jar</load>
+      <import realm="whatever">org.apache.whatever</import>
+    </realm>
+  </classworlds>
+  
   <commands>
     <command name="exit" code="org.apache.geronimo.twiddle.commands.ExitCommand"/>
+    <command name="whatever" 
+             code="org.apache.geronimo.twiddle.commands.WhateverCommand"
+             realm="whatever"/>
   </commands>
 
 </configuration>
