o Logging has moved to common PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44035 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/core/src/conf/log4j.properties
+++ b/modules/core/src/conf/log4j.properties
@@ -1,7 +1,7 @@
-log4j.rootCategory=TRACE#org.apache.geronimo.core.log.XLevel, CONSOLE
+log4j.rootCategory=TRACE#org.apache.geronimo.common.log.log4j.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.core.log.XLevel
+#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.common.log.log4j.XLevel
 log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
