o Hooked up Classworlds to load command classes PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44045 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/twiddle/src/conf/classworlds.conf
+++ b/modules/twiddle/src/conf/classworlds.conf
@@ -5,20 +5,16 @@
 ##############################################################################
 
 ##
-## $Revision: 1.2 $ $Date: 2003/08/25 17:05:42 $
+## $Revision: 1.3 $ $Date: 2003/08/27 11:59:59 $
 ##
 
 # The main entry-point
-main is org.apache.geronimo.twiddle.cli.Main from twiddle 
+main is org.apache.geronimo.twiddle.cli.Main from twiddle
 
-#
-# TODO: Fix me, so that the class realm only contains the basic
-#       libraries, but for now this works
-#
-
+# The core Twiddle class-realm
 [twiddle]
     # Allow access to resources
-    load ${twiddle.home}/etc/
+    load ${twiddle.home}/etc
     
     # Load required libraries
     load ${twiddle.home}/lib/xerces-*.jar
@@ -33,6 +29,9 @@ main is org.apache.geronimo.twiddle.cli.Main from twiddle
     
     # Logging adapter is currently in here
     load ${twiddle.home}/lib/geronimo-core-*.jar
-    
-    # Required to boot Geronimo since it does not do any bootstrap classloading
-    load ${twiddle.home}/lib/*.jar
+
+# The default class-realm for commands
+[twiddle.default]
+    import org.apache.geronimo.twiddle from twiddle
+    import org.apache.commons from twiddle
+
