--- a/modules/core/src/conf/twiddle/geronimo.conf
+++ b/modules/core/src/conf/twiddle/geronimo.conf
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.1 $ $Date: 2003/08/24 11:23:14 $ -->
+<!-- $Revision: 1.2 $ $Date: 2003/08/27 11:59:59 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
+  <class-worlds>
+    <class-realm name="twiddle.geronimo">
+      <!-- FIXME: Only load the required jars -->
+      <load>${twiddle.home}/lib/*.jar</load>
+      <import realm="twiddle.default">org.apache.geronimo.twiddle</import>
+      <import realm="twiddle.default">org.apache.commons</import>
+    </class-realm>
+  </class-worlds>
+  
   <!-- Command sets are not implemented yet so simulate them with command name -->
   <commands>
-    <command name="geronimo/start" code="org.apache.geronimo.command.StartCommand"/>
+    <command name="geronimo/start"
+             code="org.apache.geronimo.command.StartCommand"
+             realm="twiddle.geronimo"/>
   </commands>
 
 </configuration>
