o include etc resources for logging
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44054 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/core/src/conf/twiddle/geronimo.conf
+++ b/modules/core/src/conf/twiddle/geronimo.conf
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.2 $ $Date: 2003/08/27 11:59:59 $ -->
+<!-- $Revision: 1.3 $ $Date: 2003/08/28 11:02:10 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
   <class-worlds>
     <class-realm name="twiddle.geronimo">
       <!-- FIXME: Only load the required jars -->
+      <load>${twiddle.home}/etc</load>
       <load>${twiddle.home}/lib/*.jar</load>
       <import realm="twiddle.default">org.apache.geronimo.twiddle</import>
       <import realm="twiddle.default">org.apache.commons</import>
