o A command to dump system properties PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44057 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/twiddle/src/conf/twiddle.conf
+++ b/modules/twiddle/src/conf/twiddle.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.5 $ $Date: 2003/08/27 11:59:59 $ -->
+<!-- $Revision: 1.6 $ $Date: 2003/08/28 12:38:15 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
@@ -10,6 +10,7 @@
   
   <commands>
     <command name="exit" code="org.apache.geronimo.twiddle.commands.ExitCommand"/>
+    <command name="dump" code="org.apache.geronimo.twiddle.commands.DumpPropertiesCommand"/>
   </commands>
 
 </configuration>
