--- a/modules/core/src/conf/jndi.properties
+++ b/modules/core/src/conf/jndi.properties
@@ -1,3 +1,9 @@
+##
+## Default JNDI Properties
+##
+## $Revision: 1.3 $ $Date: 2003/08/28 13:29:30 $
+##
+
 java.naming.factory.initial=com.sun.jndi.rmi.registry.RegistryContextFactory
-java.naming.provider.url=rmi://localhost:1099
 java.naming.factory.url.pkgs=org.apache.geronimo.naming
+java.naming.provider.url=rmi://localhost:1099
