--- a/modules/core/src/conf/log4j.properties
+++ b/modules/core/src/conf/log4j.properties
@@ -1,3 +1,9 @@
+##
+## Log4j Configuration
+##
+## $Revision: 1.4 $ $Date: 2003/08/28 13:29:30 $
+##
+
 log4j.rootCategory=TRACE#org.apache.geronimo.common.log.log4j.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
