o needed from Log4j DOMConfigurator
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44088 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/twiddle/src/conf/classworlds.conf
+++ b/modules/twiddle/src/conf/classworlds.conf
@@ -5,7 +5,7 @@
 ##############################################################################
 
 ##
-## $Revision: 1.4 $ $Date: 2003/08/29 12:35:43 $
+## $Revision: 1.5 $ $Date: 2003/08/30 08:42:17 $
 ##
 
 # The main entry-point
@@ -17,6 +17,7 @@ main is org.apache.geronimo.twiddle.cli.Main from twiddle
     load ${twiddle.home}/etc
     
     # Load required libraries
+    load ${twiddle.home}/lib/xml-apis-*.jar
     load ${twiddle.home}/lib/xerces-*.jar
     load ${twiddle.home}/lib/castor-*.jar
     load ${twiddle.home}/lib/log4j-*.jar
