o conditionaly run tests if sources change PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44141 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.4 $ $Date: 2003/08/16 17:15:11 $
+## $Revision: 1.5 $ $Date: 2003/09/01 18:47:14 $
 ##
 
 #####################################################
@@ -17,6 +17,9 @@ maven.compile.optimize=true
 maven.junit.fork=true
 
 maven.simian.linecount=3
+
+# Force module tests to run, even if maven thinks they have passed
+#maven.test.force=true
 
 
 #####################################################
