GERONIMO-10 patch (v5)  from Aaron Mulder
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44192 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/core/src/conf/twiddle/geronimo.conf
+++ b/modules/core/src/conf/twiddle/geronimo.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.3 $ $Date: 2003/08/28 11:02:10 $ -->
+<!-- $Revision: 1.4 $ $Date: 2003/09/04 05:24:21 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
@@ -18,6 +18,9 @@
   <commands>
     <command name="geronimo/start"
              code="org.apache.geronimo.command.StartCommand"
+             realm="twiddle.geronimo"/>
+    <command name="geronimo/deploy"
+             code="org.apache.geronimo.command.DeployCommand"
              realm="twiddle.geronimo"/>
   </commands>
 
