--- a/modules/core/src/conf/log4j.properties
+++ b/modules/core/src/conf/log4j.properties
@@ -1,7 +1,7 @@
 ##
 ## Log4j Configuration
 ##
-## $Revision: 1.4 $ $Date: 2003/08/28 13:29:30 $
+## $Revision: 1.5 $ $Date: 2003/09/05 01:47:56 $
 ##
 
 log4j.rootCategory=TRACE#org.apache.geronimo.common.log.log4j.XLevel, CONSOLE
@@ -12,4 +12,7 @@ log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}] %m%n
+log4j.logger.org.apache.commons.beanutils=INFO
+log4j.logger.org.apache.commons.digester=INFO
+
 
