--- a/modules/twiddle/src/conf/twiddle.properties
+++ b/modules/twiddle/src/conf/twiddle.properties
@@ -1,8 +1,8 @@
 ##
 ## Twiddle Default Properties
 ##
-## $Revision: 1.1 $ $Date: 2003/08/27 11:08:57 $
+## $Revision: 1.2 $ $Date: 2003/09/08 04:40:04 $
 ##
 
 # Use the caching log impl by default
-org.apache.commons.logging.Log=org.apache.geronimo.common.log.log4j.CachingLog4jLog
+org.apache.commons.logging.Log=org.apache.geronimo.kernel.log.CachingLog4jLog
