--- a/modules/twiddle/src/conf/classworlds.conf
+++ b/modules/twiddle/src/conf/classworlds.conf
@@ -5,7 +5,7 @@
 ##############################################################################
 
 ##
-## $Revision: 1.5 $ $Date: 2003/08/30 08:42:17 $
+## $Revision: 1.6 $ $Date: 2003/09/29 13:01:29 $
 ##
 
 # The main entry-point
@@ -26,6 +26,7 @@ main is org.apache.geronimo.twiddle.cli.Main from twiddle
     load ${twiddle.home}/lib/commons-lang-*.jar
     load ${twiddle.home}/lib/commons-jexl-*.jar
     load ${twiddle.home}/lib/geronimo-common-*.jar
+    load ${twiddle.home}/lib/geronimo-kernel-*.jar
     load ${twiddle.home}/lib/geronimo-twiddle-*.jar
 
 # The default class-realm for commands
