Applied patch from issue geronimo-105.
This patch contains trivial alterations to the code in the JSP tag library,
clean up some of my comments and change the pointer for the web console
(instead of http://127.0.0.1:8080/jmx-console it points at /console).


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44372 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/console-web/src/webapp/WEB-INF/web.xml
+++ b/modules/console-web/src/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     </welcome-file-list>
 
     <taglib>
-        <taglib-uri>jmx-console</taglib-uri>
+        <taglib-uri>console-web</taglib-uri>
         <taglib-location>/WEB-INF/lib/jmx-console-servlet.jar</taglib-location>
     </taglib>
 
