--- a/modules/kernel/project.properties
+++ b/modules/kernel/project.properties
@@ -1,3 +1,5 @@
 ##
-## $Revision: 1.1 $ $Date: 2003/08/30 15:18:13 $
+## $Revision: 1.2 $ $Date: 2003/11/06 20:03:31 $
 ##
+
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
