Added extra maven repository.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44423 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/common/project.properties
+++ b/modules/common/project.properties
@@ -1,4 +1,5 @@
 ##
-## $Revision: 1.2 $ $Date: 2003/08/16 15:14:11 $
+## $Revision: 1.3 $ $Date: 2003/11/06 20:09:43 $
 ##
 
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
