--- a/modules/xbeans/project.properties
+++ b/modules/xbeans/project.properties
@@ -1,4 +1,5 @@
 ##
-## $Revision: 1.1 $ $Date: 2003/08/22 11:18:56 $
+## $Revision: 1.2 $ $Date: 2003/11/06 20:09:43 $
 ##
 
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
