--- a/modules/core/project.properties
+++ b/modules/core/project.properties
@@ -1,3 +1,5 @@
 ##
-## $Revision: 1.4 $ $Date: 2003/08/16 17:15:11 $
+## $Revision: 1.5 $ $Date: 2003/11/06 20:09:43 $
 ##
+
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
