--- a/modules/web/project.properties
+++ b/modules/web/project.properties
@@ -1,3 +1,5 @@
 ##
-## $Revision: 1.1 $ $Date: 2003/08/18 13:30:40 $
+## $Revision: 1.2 $ $Date: 2003/11/06 20:09:43 $
 ##
+
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
