--- a/project.properties
+++ b/project.properties
@@ -1,7 +1,8 @@
 ##
-## $Revision: 1.5 $ $Date: 2003/08/16 15:14:11 $
+## $Revision: 1.6 $ $Date: 2003/11/06 20:08:54 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
