--- a/modules/kernel/src/conf/log4j.properties
+++ b/modules/kernel/src/conf/log4j.properties
@@ -1,18 +1,19 @@
 ##
 ## Log4j Configuration
 ##
-## $Revision: 1.1 $ $Date: 2003/09/08 04:37:22 $
+## $Revision: 1.2 $ $Date: 2003/11/06 20:56:31 $
 ##
 
 log4j.rootCategory=TRACE#org.apache.geronimo.kernel.log.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.kernel.log.XLevel
-log4j.appender.CONSOLE.Threshold=DEBUG
+log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.kernel.log.XLevel
+#log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}] %m%n
 log4j.logger.org.apache.commons.beanutils=INFO
 log4j.logger.org.apache.commons.digester=INFO
+log4j.logger.org.apache.geronimo.kernel.deployment.scanner=INFO
 
 
