Unbreak the command-line deployer by fixing the classpath
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44563 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/core/src/conf/twiddle/geronimo.conf
+++ b/modules/core/src/conf/twiddle/geronimo.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Revision: 1.4 $ $Date: 2003/09/04 05:24:21 $ -->
+<!-- $Revision: 1.5 $ $Date: 2003/11/17 20:29:04 $ -->
 
 <configuration xmlns="http://geronimo.apache.org/xml/schema/Twiddle/Configuration">
   
@@ -8,6 +8,7 @@
     <class-realm name="twiddle.geronimo">
       <!-- FIXME: Only load the required jars -->
       <load>${twiddle.home}/etc</load>
+      <load>${twiddle.home}/bootlib/*.jar</load>
       <load>${twiddle.home}/lib/*.jar</load>
       <import realm="twiddle.default">org.apache.geronimo.twiddle</import>
       <import realm="twiddle.default">org.apache.commons</import>
