--- a/modules/twiddle/src/conf/classworlds.conf
+++ b/modules/twiddle/src/conf/classworlds.conf
@@ -5,7 +5,7 @@
 ##############################################################################
 
 ##
-## $Revision: 1.6 $ $Date: 2003/09/29 13:01:29 $
+## $Revision: 1.7 $ $Date: 2003/11/17 20:29:04 $
 ##
 
 # The main entry-point
@@ -17,6 +17,7 @@ main is org.apache.geronimo.twiddle.cli.Main from twiddle
     load ${twiddle.home}/etc
     
     # Load required libraries
+    load ${twiddle.home}/bootlib/*.jar
     load ${twiddle.home}/lib/xml-apis-*.jar
     load ${twiddle.home}/lib/xerces-*.jar
     load ${twiddle.home}/lib/castor-*.jar
