--- a/project.properties
+++ b/project.properties
@@ -1,8 +1,9 @@
 ##
-## $Revision: 1.6 $ $Date: 2003/11/06 20:08:54 $
+## $Revision: 1.7 $ $Date: 2003/11/25 03:44:38 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
+maven.junit.fork=true
