--- a/modules/web/project.properties
+++ b/modules/web/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.2 $ $Date: 2003/11/06 20:09:43 $
+## $Revision: 1.3 $ $Date: 2004/01/20 14:54:27 $
 ##
 
-maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven, http://www.apache.org/~gdamour/maven
