Our current version is DEV
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44989 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.5 $ $Date: 2003/09/01 18:47:14 $
+## $Revision: 1.6 $ $Date: 2004/01/31 16:12:18 $
 ##
 
 #####################################################
@@ -27,7 +27,7 @@ maven.simian.linecount=3
 #####################################################
 
 maven.xdoc.date=left
-maven.xdoc.version=${pom.currentVersion}
+maven.xdoc.version=DEV
 
 maven.linkcheck.enable=true
 
