Updated assemply to output a cleaner distribution... still needs work
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45018 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/kernel/src/conf/log4j.properties
+++ b/modules/kernel/src/conf/log4j.properties
@@ -1,14 +1,14 @@
 ##
 ## Log4j Configuration
 ##
-## $Revision: 1.2 $ $Date: 2003/11/06 20:56:31 $
+## $Revision: 1.3 $ $Date: 2004/02/06 08:27:49 $
 ##
 
 log4j.rootCategory=TRACE#org.apache.geronimo.kernel.log.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.kernel.log.XLevel
-#log4j.appender.CONSOLE.Threshold=DEBUG
+#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.kernel.log.XLevel
+log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}] %m%n
