--- a/modules/common/src/conf/log4j.properties
+++ b/modules/common/src/conf/log4j.properties
@@ -1,10 +1,10 @@
 ##
 ## Default Log4j Configuration
 ##
-## $Revision: 1.3 $ $Date: 2003/12/09 04:54:02 $
+## $Revision: 1.4 $ $Date: 2004/02/11 03:14:10 $
 ##
 
-log4j.category.org.apache.geronimo=TRACE#org.apache.geronimo.kernel.log.XLevel, CONSOLE
+log4j.category.org.apache.geronimo=TRACE#org.apache.geronimo.core.logging.log4j.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=DEBUG
