--- a/modules/kernel/src/conf/log4j.properties
+++ b/modules/kernel/src/conf/log4j.properties
@@ -1,13 +1,13 @@
 ##
 ## Log4j Configuration
 ##
-## $Revision: 1.3 $ $Date: 2004/02/06 08:27:49 $
+## $Revision: 1.4 $ $Date: 2004/02/11 03:14:11 $
 ##
 
-log4j.rootCategory=TRACE#org.apache.geronimo.kernel.log.XLevel, CONSOLE
+log4j.rootCategory=TRACE#org.apache.geronimo.core.logging.log4j.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.kernel.log.XLevel
+#log4j.appender.CONSOLE.Threshold=TRACE#org.apache.geronimo.core.logging.log4j.XLevel
 log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
