Reflect move of logging from core to system
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45069 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/common/src/conf/log4j.properties
+++ b/modules/common/src/conf/log4j.properties
@@ -1,10 +1,10 @@
 ##
 ## Default Log4j Configuration
 ##
-## $Revision: 1.4 $ $Date: 2004/02/11 03:14:10 $
+## $Revision: 1.5 $ $Date: 2004/02/12 18:18:08 $
 ##
 
-log4j.category.org.apache.geronimo=TRACE#org.apache.geronimo.core.logging.log4j.XLevel, CONSOLE
+log4j.category.org.apache.geronimo=TRACE#org.apache.geronimo.system.logging.log4j.XLevel, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=DEBUG
