--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -1,5 +1,6 @@
 ##
-## $Revision: 1.1 $ $Date: 2004/01/23 06:47:06 $
+## $Revision: 1.2 $ $Date: 2004/02/17 00:05:38 $
 ##
 
 maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
