Moved declaration of remote repo to the global.properties file Removed all project.proterty files that are no longer needed
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45143 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,12 +1,12 @@
 ##
-## $Revision: 1.6 $ $Date: 2004/01/31 16:12:18 $
+## $Revision: 1.7 $ $Date: 2004/02/18 22:16:33 $
 ##
 
 #####################################################
 # Build and Deployment
 #####################################################
 
-maven.repo.remote=http://www.ibiblio.org/maven/
+maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven/
 
 maven.compile.source=1.4
 maven.compile.target=1.4
