--- a/etc/global.properties
+++ b/etc/global.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.7 $ $Date: 2004/02/18 22:16:33 $
+## $Revision: 1.8 $ $Date: 2004/03/02 22:28:34 $
 ##
 
 #####################################################
@@ -15,6 +15,8 @@ maven.compile.debug=true
 maven.compile.optimize=true
 
 maven.junit.fork=true
+
+#maven.war.final.name=${pom.artifactId}-${pom.currentVersion}.war
 
 maven.simian.linecount=3
 
