Update to tranql SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45289 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,14 +16,14 @@
 ##
 
 ##
-## $Revision: 1.9 $ $Date: 2004/03/10 10:00:50 $
+## $Revision: 1.10 $ $Date: 2004/03/22 00:30:19 $
 ##
 
 #####################################################
 # Build and Deployment
 #####################################################
 
-maven.repo.remote=http://www.apache.org/~dain/maven, http://www.ibiblio.org/maven/
+maven.repo.remote=http://www.apache.org/~dain/maven, http://tranql.codehaus.org/maven, http://www.ibiblio.org/maven/
 
 maven.compile.source=1.4
 maven.compile.target=1.4
