--- a/modules/network/project.properties
+++ b/modules/network/project.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.2 $ $Date: 2004/03/10 09:59:12 $
+## $Revision: 1.3 $ $Date: 2004/03/23 04:01:02 $
 ##
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
