--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.4 $ $Date: 2004/03/10 09:59:25 $
+## $Revision: 1.5 $ $Date: 2004/04/06 01:38:39 $
 ##
 
-maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
