Enabled asserts in unit tests Fixed problems with bad asserts
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45312 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.10 $ $Date: 2004/03/22 00:30:19 $
+## $Revision: 1.11 $ $Date: 2004/04/08 05:22:15 $
 ##
 
 #####################################################
@@ -32,6 +32,7 @@ maven.compile.debug=true
 maven.compile.optimize=true
 
 maven.junit.fork=true
+maven.junit.jvmargs=-ea
 
 #maven.war.final.name=${pom.artifactId}-${pom.currentVersion}.war
 
