--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,14 +16,14 @@
 ##
 
 ##
-## $Revision: 1.11 $ $Date: 2004/04/08 05:22:15 $
+## $Revision: 1.12 $ $Date: 2004/04/25 23:21:50 $
 ##
 
 #####################################################
 # Build and Deployment
 #####################################################
 
-maven.repo.remote=http://www.apache.org/~dain/maven, http://tranql.codehaus.org/maven, http://www.ibiblio.org/maven/
+#maven.repo.remote=http://www.apache.org/~dain/maven,http://tranql.codehaus.org/maven,http://www.openejb.org/maven,http://www.ibiblio.org/maven
 
 maven.compile.source=1.4
 maven.compile.target=1.4
