--- a/project.properties
+++ b/project.properties
@@ -1,8 +1,8 @@
 ##
-## $Revision: 1.9 $ $Date: 2004/03/22 00:30:18 $
+## $Revision: 1.10 $ $Date: 2004/04/25 23:21:50 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://www.apache.org/~dain/maven, http://tranql.codehaus.org/maven, http://www.ibiblio.org/maven/
+maven.repo.remote=http://www.apache.org/~dain/maven, http://tranql.codehaus.org/maven, http://www.openejb.org/maven, http://www.ibiblio.org/maven
