Changed geronimo to version 1.0M1 Changed activemq to version 1.0-M1
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45363 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,14 +16,14 @@
 ##
 
 ##
-## $Revision: 1.12 $ $Date: 2004/04/25 23:21:50 $
+## $Revision: 1.13 $ $Date: 2004/04/26 20:18:58 $
 ##
 
 #####################################################
 # Build and Deployment
 #####################################################
 
-#maven.repo.remote=http://www.apache.org/~dain/maven,http://tranql.codehaus.org/maven,http://www.openejb.org/maven,http://www.ibiblio.org/maven
+#maven.repo.remote=http://tranql.codehaus.org/maven,http://www.openejb.org/maven,http://www.ibiblio.org/maven
 
 maven.compile.source=1.4
 maven.compile.target=1.4
