First phase of JACC incorporation.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45454 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -1,7 +1,9 @@
 ##
-## $Revision: 1.1 $ $Date: 2004/04/27 00:55:48 $
+## $Revision: 1.2 $ $Date: 2004/05/30 19:09:57 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
