Customize our checkstyle template slightly from the default sun-style template
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45534 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.13 $ $Date: 2004/04/26 20:18:58 $
+## $Revision: 1.14 $ $Date: 2004/06/12 18:49:18 $
 ##
 
 #####################################################
@@ -37,6 +37,8 @@ maven.junit.jvmargs=-ea
 #maven.war.final.name=${pom.artifactId}-${pom.currentVersion}.war
 
 maven.simian.linecount=3
+
+maven.checkstyle.properties=../../etc/geronimo_checks.xml
 
 # Force module tests to run, even if maven thinks they have passed
 #maven.test.force=true
