make top level site goal work instead of individual project site goals
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45535 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.14 $ $Date: 2004/06/12 18:49:18 $
+## $Revision: 1.15 $ $Date: 2004/06/13 15:57:58 $
 ##
 
 #####################################################
@@ -38,7 +38,7 @@ maven.junit.jvmargs=-ea
 
 maven.simian.linecount=3
 
-maven.checkstyle.properties=../../etc/geronimo_checks.xml
+maven.checkstyle.properties=etc/geronimo_checks.xml
 
 # Force module tests to run, even if maven thinks they have passed
 #maven.test.force=true
