--- a/applications/jmxdebug/src/webapp/WEB-INF/web.xml
+++ b/applications/jmxdebug/src/webapp/WEB-INF/web.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+<web-app id="debug-tool"
+    xmlns="http://java.sun.com/xml/ns/j2ee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+    version="2.4">
 
     <!-- Welcome File List -->
     <welcome-file-list>
         <welcome-file>index.vm</welcome-file>
     </welcome-file-list>
 
-  <servlet>
-    <servlet-name>Debug</servlet-name>
-    <servlet-class>org.apache.geronimo.jmxdebug.web.velocity.DebugServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+    <servlet>
+        <servlet-name>Debug</servlet-name>
+        <servlet-class>org.apache.geronimo.jmxdebug.web.velocity.DebugServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>Debug</servlet-name>
-    <url-pattern>/*</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Debug</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
 </web-app>
