Transaction logger based on HOWL logger and some basic recovery  tests
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45555 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/transaction/project.properties
+++ b/modules/transaction/project.properties
@@ -1,7 +1,5 @@
 ##
-## $Revision: 1.3 $ $Date: 2004/04/27 00:55:48 $
+## $Revision: 1.4 $ $Date: 2004/06/19 17:17:13 $
 ##
 
-# the directory containing the geronimo website in CVS
-
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
