Update howl version in assembly to match transaction
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45571 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -1,8 +1,8 @@
 ##
-## $Revision: 1.1 $ $Date: 2004/04/27 00:55:48 $
+## $Revision: 1.2 $ $Date: 2004/06/23 09:03:38 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.apache.org/~djencks/maven,http://dist.codehaus.org, http://www.ibiblio.org/maven
