--- a/applications/demo/src/webapp/WEB-INF/web.xml
+++ b/applications/demo/src/webapp/WEB-INF/web.xml
@@ -18,6 +18,14 @@
         <role-name>content-administrator</role-name>
       </auth-constraint>
     </security-constraint>
+    
+    <security-constraint>
+      <web-resource-collection>
+        <web-resource-name>No Access</web-resource-name>
+        <url-pattern>/forbidden/*</url-pattern>
+      </web-resource-collection>
+      <auth-constraint/>
+    </security-constraint>
 
     <login-config>
       <auth-method>FORM</auth-method>
