Making the maven eclipse target to work with the Reactor
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45636 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -16,7 +16,9 @@
 ##
 
 ##
-## $Revision: 1.5 $ $Date: 2004/04/06 01:38:39 $
+## $Revision: 1.6 $ $Date: 2004/07/13 02:19:38 $
 ##
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
+# Include the generated xmlbean classes in the eclipse classpath
+maven.eclipse.classpath.include=target/xmlbeans
