Making the maven eclipse target to work with the Reactor
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45637 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -1,7 +1,10 @@
 ##
-## $Revision: 1.5 $ $Date: 2004/04/27 00:55:48 $
+## $Revision: 1.6 $ $Date: 2004/07/13 02:25:13 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+
+# Include the generated xmlbean classes in the eclipse classpath
+maven.eclipse.classpath.include=target/xmlbeans
