--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.2 $ $Date: 2004/05/30 19:09:57 $
+## $Revision: 1.3 $ $Date: 2004/07/13 02:25:13 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -7,3 +7,6 @@
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
+
+# Include the generated xmlbean classes in the eclipse classpath
+maven.eclipse.classpath.include=target/xmlbeans
