Geronimo now builds into target/${pom.groupId}-${pom.currentVersion} i.e. target/geronimo-1.0-M67
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45742 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -1,8 +1,9 @@
 ##
-## $Revision: 1.12 $ $Date: 2004/04/27 00:55:48 $
+## $Revision: 1.13 $ $Date: 2004/07/28 19:16:08 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+#module.excludes=axis
