The plan files now use parsed xml entities for geronimo version numbers making it much easier to change versions.
The assembly module no longer uses the deploy plugin

Upped the version number to 1.0-M2.  CVS will be tagged, then the version
number will be restored to 1.0-SNAPSHOT

The build works completely, don't hose it up.


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45743 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -1,9 +1,10 @@
 ##
-## $Revision: 1.13 $ $Date: 2004/07/28 19:16:08 $
+## $Revision: 1.14 $ $Date: 2004/07/29 02:58:36 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
-#module.excludes=axis
+module.excludes=axis
+#maven.test.failure.ignore=true
