--- a/project.properties
+++ b/project.properties
@@ -1,10 +1,10 @@
 ##
-## $Revision: 1.14 $ $Date: 2004/07/29 02:58:36 $
+## $Revision: 1.15 $ $Date: 2004/07/29 03:32:05 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
-module.excludes=axis
+#module.excludes=axis
 #maven.test.failure.ignore=true
