--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.15 $ $Date: 2004/07/29 03:32:05 $
+## $Revision: 1.16 $ $Date: 2004/07/30 02:23:27 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -8,3 +8,4 @@ geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 #module.excludes=axis
 #maven.test.failure.ignore=true
+maven.remote.group=apcvs
