--- a/modules/axis/src/samples/echo/build.xml
+++ b/modules/axis/src/samples/echo/build.xml
@@ -1,50 +1,50 @@
 <?xml version="1.0"?>
-<project basedir="." default="jar" >
-	<property name="src" location="."/>
-	<property name="build" location="build"/>
-	<property name="build.classes" location="${build}/classes"/>
-	<property name="build.lib" location="${build}/lib"/>
-	<property name="lib" location="lib"/>
-	<property name="jar.dir" location="../../../target/samples/"/>
-	
-	<target name="compile" depends="init" unless="jars.uptodate">
-	   <mkdir dir="${build.classes}"/>
-	   <mkdir dir="${build.lib}"/>
-		<javac destdir="${build.classes}" debug="on">
-			<classpath refid="maven.dependency.classpath" />
-			<src path="${src}"/>
-		</javac>
-	</target>
-	
-	<target name="jar" depends="compile" unless="jars.uptodate">
-		<echoproperties />
-		<mkdir dir="${build.classes}/META-INF/"/>
-		<copy file ="${basedir}/META-INF/webservice.xml" todir="${build.classes}/META-INF"/>
-		<copy file ="${basedir}/META-INF/ejb-jar.xml" todir="${build.classes}/META-INF"/>
-		<mkdir dir="${jar.dir}"/>
- 		<jar jarfile="${jar.dir}/echo.jar" basedir="${build.classes}" >
-		<include name="**" />
-		</jar>
+<project basedir="." default="jar">
+    <property name="src" location="."/>
+    <property name="build" location="build"/>
+    <property name="build.classes" location="${build}/classes"/>
+    <property name="build.lib" location="${build}/lib"/>
+    <property name="lib" location="lib"/>
+    <property name="jar.dir" location="../../../target/samples/"/>
 
-       <copy todir="${build.classes}/META-INF">
-			<fileset dir="${basedir}/META-INF/">
-			<include name="**/*.xml"/>
-			<exclude name="build.xml"/>
-			</fileset>
-		</copy>
+    <target name="compile" depends="init" unless="jars.uptodate">
+        <mkdir dir="${build.classes}"/>
+        <mkdir dir="${build.lib}"/>
+        <javac destdir="${build.classes}" debug="on">
+            <classpath refid="maven.dependency.classpath"/>
+            <src path="${src}"/>
+        </javac>
+    </target>
 
-		<delete dir="${build}"/>
-	</target>
-	
-	<target name="init">
-		<uptodate property="jars.uptodate" targetfile="${jar.dir}/echo.jar">
-			<srcfiles dir="${src}">
-				<include name="**/*.java"/>
-				<include name="**/*.xml"/>
-				<include name="**/*.wsdl"/>
-				<exclude name="${build}/**"/>
-			</srcfiles>
-		</uptodate>
-		<echo message="the files are up to date = ${jars.uptodate}"></echo>
-	</target>
+    <target name="jar" depends="compile" unless="jars.uptodate">
+        <!--<echoproperties />-->
+        <mkdir dir="${build.classes}/META-INF/"/>
+        <copy file="${basedir}/META-INF/webservice.xml" todir="${build.classes}/META-INF"/>
+        <copy file="${basedir}/META-INF/ejb-jar.xml" todir="${build.classes}/META-INF"/>
+        <mkdir dir="${jar.dir}"/>
+        <jar jarfile="${jar.dir}/echo.jar" basedir="${build.classes}">
+            <include name="**"/>
+        </jar>
+
+        <copy todir="${build.classes}/META-INF">
+            <fileset dir="${basedir}/META-INF/">
+                <include name="**/*.xml"/>
+                <exclude name="build.xml"/>
+            </fileset>
+        </copy>
+
+        <delete dir="${build}"/>
+    </target>
+
+    <target name="init">
+        <uptodate property="jars.uptodate" targetfile="${jar.dir}/echo.jar">
+            <srcfiles dir="${src}">
+                <include name="**/*.java"/>
+                <include name="**/*.xml"/>
+                <include name="**/*.wsdl"/>
+                <exclude name="${build}/**"/>
+            </srcfiles>
+        </uptodate>
+        <!--<echo message="the files are up to date = ${jars.uptodate}"></echo>-->
+    </target>
 </project>
