Only fork tests when needed.  We still fork way to often but this is better.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45815 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.6 $ $Date: 2004/07/13 02:25:13 $
+## $Revision: 1.7 $ $Date: 2004/09/05 06:09:10 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -8,3 +8,5 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+
+maven.junit.fork=true
