--- a/modules/network/project.properties
+++ b/modules/network/project.properties
@@ -16,7 +16,8 @@
 ##
 
 ##
-## $Revision: 1.3 $ $Date: 2004/03/23 04:01:02 $
+## $Revision: 1.4 $ $Date: 2004/09/05 06:09:11 $
 ##
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
+maven.junit.fork=true
