--- a/modules/system/project.properties
+++ b/modules/system/project.properties
@@ -16,7 +16,8 @@
 ##
 
 ##
-## $Revision: 1.1 $ $Date: 2004/03/14 02:05:29 $
+## $Revision: 1.2 $ $Date: 2004/09/05 06:09:11 $
 ##
 
 maven.junit.jvmargs=-Djava.io.tmpdir=target/tmp
+maven.junit.fork=true
