--- a/modules/axis/project.properties
+++ b/modules/axis/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.2 $ $Date: 2004/07/22 14:57:48 $
+## $Revision: 1.3 $ $Date: 2004/09/05 06:09:10 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -7,4 +7,5 @@
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://ws.apache.org/~dims/maven
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
+maven.junit.fork=true
 maven.compile.optimize=false
