--- a/modules/j2ee/project.properties
+++ b/modules/j2ee/project.properties
@@ -1,6 +1,7 @@
 ##
-## $Revision: 1.1 $ $Date: 2004/07/13 02:26:33 $
+## $Revision: 1.2 $ $Date: 2004/09/05 06:09:11 $
 ##
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+maven.junit.fork=true
