--- a/modules/transaction/project.properties
+++ b/modules/transaction/project.properties
@@ -1,5 +1,6 @@
 ##
-## $Revision: 1.4 $ $Date: 2004/06/19 17:17:13 $
+## $Revision: 1.5 $ $Date: 2004/09/05 06:09:11 $
 ##
 
 maven.repo.remote=http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
+maven.junit.fork=true
