--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.7 $ $Date: 2004/09/05 06:09:10 $
+## $Revision: 1.8 $ $Date: 2004/09/05 21:05:06 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -9,4 +9,6 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
 
-maven.junit.fork=true
+# Pass basedir of this module as a system property to tests
+maven.junit.sysproperties=geronimo.test.basedir
+geronimo.test.basedir=${basedir}
