--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.9 $ $Date: 2004/09/06 01:38:02 $
+## $Revision: 1.10 $ $Date: 2004/09/06 14:44:03 $
 ##
 
 # the directory containing the geronimo website in CVS
@@ -8,3 +8,4 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+maven.junit.fork=true
