Added reference to openejb maven repository which contains the geronimo-spec jars
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45827 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -1,10 +1,10 @@
 ##
-## $Revision: 1.4 $ $Date: 2004/09/05 06:09:11 $
+## $Revision: 1.5 $ $Date: 2004/09/06 18:20:00 $
 ##
 
 # the directory containing the geronimo website in CVS
 
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
 maven.junit.fork=true
