--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -16,9 +16,10 @@
 ##
 
 ##
-## $Revision: 1.7 $ $Date: 2004/09/05 06:09:11 $
+## $Revision: 1.8 $ $Date: 2004/09/06 18:20:00 $
 ##
 
+maven.repo.remote=http://www.openejb.org/maven, http://www.ibiblio.org/maven
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties
 maven.junit.fork=true
 # Include the generated xmlbean classes in the eclipse classpath
