--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -1,8 +1,8 @@
 ##
-## $Revision: 1.2 $ $Date: 2004/06/23 09:03:38 $
+## $Revision: 1.3 $ $Date: 2004/09/06 18:20:00 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://www.apache.org/~djencks/maven,http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.openejb.org/maven, http://www.apache.org/~djencks/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven
