--- a/modules/transaction/project.properties
+++ b/modules/transaction/project.properties
@@ -1,5 +1,5 @@
 ##
-## $Revision: 1.6 $ $Date: 2004/09/06 04:56:31 $
+## $Revision: 1.7 $ $Date: 2004/09/06 18:20:00 $
 ##
 
-maven.repo.remote=http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.openejb.org/maven, http://www.apache.org/~djencks/maven, http://www.ibiblio.org/maven
