Temporarily excluding the axis module.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45829 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -1,11 +1,11 @@
 ##
-## $Revision: 1.16 $ $Date: 2004/07/30 02:23:27 $
+## $Revision: 1.17 $ $Date: 2004/09/07 03:06:43 $
 ##
 
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
-#module.excludes=axis
+module.excludes=axis
 #maven.test.failure.ignore=true
 maven.remote.group=apcvs
