Changing $Revision$ to $Rev$
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45925 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/global.properties
+++ b/etc/global.properties
@@ -16,7 +16,7 @@
 ##
 
 ##
-## $Revision: 1.16 $ $Date: 2004/09/05 06:09:10 $
+## $Rev$ $Date$
 ##
 
 #####################################################
