Further enhancements to Tomcat embedded into Geronimo - it is running almost well (cannot connect to localhost:8080, though); upgrade to 5.0.28 (files are at http://www.apache.org/~jlaskowski/maven as Tomcat jars are not updated regularly at iBiblio)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@46937 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -4,7 +4,7 @@
 
 # the directory containing the geronimo website in CVS
 
-maven.repo.remote=http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://www.apache.org/~jlaskowski/maven, http://www.openejb.org/maven, http://dist.codehaus.org, http://www.ibiblio.org/maven
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
 maven.junit.fork=true
