--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -9,3 +9,5 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
 maven.junit.fork=true
+
+maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
