add additional source line to go with http://jira.codehaus.org/browse/MPIDEA-10
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@47137 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/connector/project.properties
+++ b/modules/connector/project.properties
@@ -11,3 +11,5 @@ maven.eclipse.classpath.include=target/xmlbeans
 maven.junit.fork=true
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config
+
+maven.idea.generated.source=xmlbeans
