--- a/modules/j2ee-schema/project.properties
+++ b/modules/j2ee-schema/project.properties
@@ -4,3 +4,6 @@
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+
+
+maven.idea.generated.source=xmlbeans
