--- a/modules/jetty/project.properties
+++ b/modules/jetty/project.properties
@@ -11,3 +11,5 @@ maven.junit.fork=true
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+
+maven.idea.generated.source=xmlbeans
