--- a/modules/security/project.properties
+++ b/modules/security/project.properties
@@ -24,3 +24,5 @@ maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.c
 maven.junit.fork=true
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+
+maven.idea.generated.source=xmlbeans
