--- a/modules/deployment/project.properties
+++ b/modules/deployment/project.properties
@@ -4,3 +4,5 @@
 
 # Include the generated xmlbean classes in the eclipse classpath
 maven.eclipse.classpath.include=target/xmlbeans
+
+maven.idea.generated.source=xmlbeans
