Changed test to use JACC.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@47268 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
+++ b/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
@@ -51,7 +51,7 @@
     </login-config>
 
     <security-role>
-        <role-name>FOO</role-name>
+        <role-name>content-administrator</role-name>
     </security-role>
 
     <ejb-ref>
