--- a/applications/magicGball/project.properties
+++ b/applications/magicGball/project.properties
@@ -12,6 +12,7 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 
+maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http://cvs.apache.org/repository
 maven.multiproject.type=war
 maven.final.name=${pom.artifactId}
 maven.war.classes.includes=**/*Servlet.class
