Nice tricky constraint.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@51856 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
+++ b/modules/jetty/src/test-resources/deployables/war3/WEB-INF/web.xml
@@ -41,6 +41,14 @@
       </auth-constraint>
     </security-constraint>
 
+    <security-constraint>
+      <web-resource-collection>
+        <web-resource-name>NO ACCESS</web-resource-name>
+        <url-pattern>/auth/logon.html</url-pattern>
+      </web-resource-collection>
+      <auth-constraint/>
+    </security-constraint>
+
     <login-config>
       <auth-method>FORM</auth-method>
       <realm-name>Test JAAS Realm</realm-name>
