--- a/project.properties
+++ b/project.properties
@@ -19,7 +19,7 @@
 # the directory containing the geronimo website in CVS
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven
+maven.repo.remote=http://dist.codehaus.org, http://www.mortbay.org/maven, http://www.ibiblio.org/maven
 module.excludes=axis
 #maven.test.failure.ignore=true
 maven.remote.group=apcvs
