Added new m: goals.  These are designed to replace our exiting multiproject and reactor goals.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@53841 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -27,18 +27,17 @@ maven.remote.group=apcvs
 #multiproject properties
 maven.multiproject.includes=\
 openejb/modules/*/project.xml,\
-*/*/project.xml,\
+applications/*/project.xml,\
+modules/*/project.xml,\
 activemq/project.xml,\
-activemq/modules/*/project.xml,
+activemq/modules/ra/project.xml,\
 howl/logger/project.xml,\
 tranql/*/project.xml
 
 maven.multiproject.excludes=\
 modules/axis/project.xml,\
-sandbox/*/project.xml,\
-*/etc/project.xml,\
-activemq/modules/*/project.xml,\
-activemq/modules/maven-rar-plugin/project.xml,\
+itests/*/project.xml,\
+openejb/modules/itests/project.xml,\
 openejb/modules/connector/project.xml,\
 openejb/modules/webadmin/project.xml
 
