Axis not ready yet...sorry.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54094 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -20,7 +20,7 @@
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.mortbay.org/maven, http://www.ibiblio.org/maven
-#module.excludes=axis
+module.excludes=axis
 #maven.test.failure.ignore=true
 maven.remote.group=apcvs
 
@@ -35,6 +35,7 @@ howl/logger/project.xml,\
 tranql/*/project.xml
 
 maven.multiproject.excludes=\
+modules/axis/project.xml,\
 itests/*/project.xml,\
 openejb/modules/itests/project.xml,\
 openejb/modules/connector/project.xml,\
