Setting compiler options so that it build under jdk 1.5
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54115 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/magicGball/project.properties
+++ b/applications/magicGball/project.properties
@@ -17,3 +17,11 @@ maven.multiproject.type=war
 maven.final.name=${pom.artifactId}
 maven.war.classes.includes=**/*Servlet.class
 
+maven.compile.source=1.4
+maven.compile.target=1.4
+maven.compile.deprecation=true
+maven.compile.debug=true
+maven.compile.optimize=true
+
+maven.junit.jvmargs=-ea
+
