Re-enabling Axis...Please let me know if there any problems.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54161 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/axis/project.properties
+++ b/modules/axis/project.properties
@@ -9,3 +9,4 @@ maven.repo.remote=http://dist.codehaus.org, http://www.ibiblio.org/maven, http:/
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config
 maven.junit.fork=true
 maven.compile.optimize=false
+maven.compile.fork=true
