Still not fixed
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@54176 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -20,7 +20,7 @@
 
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.mortbay.org/maven, http://www.ibiblio.org/maven
-#module.excludes=axis
+module.excludes=axis
 #maven.test.failure.ignore=true
 maven.remote.group=apcvs
 
