--- a/project.properties
+++ b/project.properties
@@ -22,10 +22,14 @@ geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 maven.repo.remote=http://dist.codehaus.org, http://www.mortbay.org/maven, http://www.ibiblio.org/maven
 module.excludes=axis
 #maven.test.failure.ignore=true
+#maven.test.skip=true
+#maven.itest.skip=true
 maven.remote.group=apcvs
 
 #multiproject properties
 maven.multiproject.includes=\
+plugins/maven-xmlbeans-plugin/project.xml,\
+specs/*/project.xml,\
 openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
@@ -35,6 +39,7 @@ howl/logger/project.xml,\
 tranql/*/project.xml
 
 maven.multiproject.excludes=\
+modules/tomcat/project.xml,\
 itests/*/project.xml,\
 openejb/modules/itests/project.xml,\
 openejb/modules/connector/project.xml,\
